ktl-1727 fix: fix safari flickering

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/toc-tree/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/toc-tree/styles.scss
@@ -56,11 +56,9 @@
     padding: 0 8px 0 0;
 
     cursor: pointer;
-    transition: var(--hover-transition);
 
     border: none;
     background-color: inherit;
-    will-change: background-color;
 
     &::after {
       width: 24px;
